# mindpalace

./: .gitignore  CLAUDE.md  EXAMPLES.md  INDEX.md  README.en.md  README.md  book.toml  pyproject.toml
.claude/: settings.json
.claude/agents/: db-worker.md  full-context.md  refactorer.md  researcher.md  reviewer.md  verifier.md
.githooks/: post-commit
.omc/sessions/: 0f1a14dd-1a61-4b73-9970-e4d9947f7a71.json  6ae586fa-3cc5-434d-8827-67e4df09800e.json  8b58b0cf-904c-4f59-bd5c-8730af4a983a.json  8ddaf0a2-e6cc-459a-843c-766bdb984ffe.json  (+2 more)
artifacts/: README.md
checklists/: INDEX.md  bugfix.md  code_review.md  eval.md  plan.md  pr.md  quality_gate.md  research_before_implement.md  risky_actions.md  verify.md
claudedocs/: CLAUDEKR.md  CLAUDE_original.md  INDEX.md  agreements.md  bootstrap_oh_my_claudecode.md  ecc_harness_analysis.md  project_instructions.md
docs/: README.md  SUMMARY.md  glossary.yaml
rules/: INDEX.md  adversarial_review.md  agent_routing.md  agent_security.md  anti_hallucination.md  assetization.md  change_control.md  code_review_policy.md  coding_standards.md  commit_and_pr.md  context7_policy.md  context_management.md  cost_awareness.md  doc_standards.md  documentation_policy.md  harness_integration_contract.md  hook_recipes.md  learning_policy.md  mcp_policy.md  quality_gates.md  repo_command_discovery.md  safety_security.md  session_persistence.md  tdd_policy.md  verification_tests_and_evals.md
scripts/: docs-build.sh  harness-audit.sh  harness-sync.sh  harness-version-bump.sh  test-harness-audit.sh
templates/: INDEX.md  assumptions.md  decision_log.md  eval_definition.md  eval_report.md  policy_sync_checklist.md  pr_body.md  prd_tldr_header.md  retro.md  session_retro.md
tests/: test_chunking.py  test_cli.py  test_embedding.py  test_integration.py  test_masking.py  test_obs.py  test_parsing.py  test_search.py  test_security.py  test_storage.py  test_web.py
(+68 files in other folders)
