[project]
name = "mindpalace"
version = "0.0.1"
description = "Personal knowledge vault for Claude Code sessions and Claude web/desktop chats"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mindpalace"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
