[project]
name = "mindpalace"
version = "0.0.1"
description = "Personal knowledge vault for Claude Code sessions and Claude web/desktop chats"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sentence-transformers>=5.5.1",
    "sqlite-vec>=0.1.9",
    "typer>=0.25.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
mindpalace = "mindpalace.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mindpalace"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
