[project]
name = "mindpalace"
version = "0.0.1"
description = "Personal knowledge vault for Claude Code sessions and Claude web/desktop chats"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "ijson>=3.5.0",
    "sentence-transformers>=5.5.1",
    "sqlite-vec>=0.1.9",
    "typer>=0.25.1",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0",
]

[project.scripts]
mindpalace = "mindpalace.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mindpalace"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
